# ap_vc_xtts

./: .cursorignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celery_worker.py  docker-compose.yml  dump.rdb  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1955d9e1c7f7_denoiser_fix.py  24075597bfcd_create_initial_tables.py  3c1b196cd83c_add_spectral_denoiser.py  423043ae0662_denoiser_setup.py  4a9c0096f1cf_denoiser_setup.py  562a908a4ebf_denoiser.py  5c0c0283faf9_table_fix.py  863145be9d64_denoiser_methods.py  d3b2ca4c8593_add_speaker_dizarization.py  dba2c3d583e2_table_fixes.py
app/: main.py
app/core/: batch.py  cache.py  celery_app.py  config.py  constants.py  device.py  errors.py  logging.py  memory.py  metrics.py  middleware.py  monitoring.py  monitoring_registry.py  optimization.py  secrets.py  security.py  service_registry.py  task_manager.py  task_processor.py  task_registry.py
app/db/: base.py  session.py
app/models/: __init__.py  audio.py  user.py
app/schemas/: __init__.py  audio.py  speaker.py  user.py
app/services/: denoiser_service.py  media_extractor.py  speaker_diarization.py  speaker_extraction.py  spectral_denoiser_service.py  storage_service.py  translation.py  voice_cloning.py
app/workers/: celery_worker.py  denoiser_tasks.py  speaker_tasks.py  (+3 more)
docs/: deployment.md
scripts/: install_dependencies.sh  migrate.sh  setup.sh  start.sh
tests/: conftest.py  test_auth.py  test_speaker_normalization.py  test_translation.py  test_voice.py
(+13 files in other folders)
